Fixes overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,14 @@ html {
   scroll-behavior: smooth;
 }
 
+body, html{
+  margin:0;
+  padding:0;
+  height:100%;
+  max-width: 100%;
+  background-color: #efefef;
+}
+
 * {
   font-size: 16px;
   font-family: "Open Sans", "Noto Sans", Arial, sans-serif;
@@ -40,11 +48,6 @@ p {
   line-height: 1.5;
 }
 
-body {
-  margin: auto 5vw;
-  background-color: #efefef;
-}
-
 header {
   margin-right: 5vw;
 }
@@ -69,8 +72,7 @@ header {
   position: fixed;
   display: flex;
   text-transform: uppercase;
-  width: auto;
-  right: 1.5vh;
+  width: 80vw;
   left: 5vw;
   margin: auto;
   color: black;
@@ -256,6 +258,15 @@ header {
   margin-left: 0.4em;
   animation: scrollArrow 0.7s infinite alternate;
   color: white;
+  text-decoration: none;
+}
+
+#scrollArrow-VR{
+  display: inline-block;
+  margin-top: 0.2em;
+  margin-left: 0.4em;
+  animation: scrollArrow 0.7s infinite alternate;
+  color: black;
   text-decoration: none;
 }
 
@@ -665,6 +676,10 @@ button#hippo {
   margin-bottom: 12vh;
 }
 
+.section{
+  text-align: center;
+}
+
 .bold {
   font-weight: 600;
 }
@@ -779,7 +794,7 @@ button#hippo {
 }
 
 .expandButtons,
-#collapsible {
+#collapsible, #jump-end{
   border: solid 1px rgb(134, 134, 134);
   border-radius: 40px;
   text-align: center;
@@ -791,10 +806,16 @@ button#hippo {
 }
 .expandButtons:hover,
 #collapsible:hover,
-.resume-email:hover {
+.resume-email:hover,#jump-end {
   cursor: pointer;
   box-shadow: 5px 5px 5px rgb(170, 170, 170);
   transform: translateY(-2px);
+}
+
+#jump-end{
+  font-weight: 800;
+  padding: 10px 20px;
+  position: absolute;
 }
 
 .resume-email {
@@ -878,6 +899,7 @@ button#hippo {
   position: fixed;
   z-index: 1;
   width: 90vw;
+  left: 5vw;
 }
 
 .progress-portfolio {
@@ -1018,16 +1040,15 @@ div.portfolio-projects h6 {
 }
 
 .main-images {
-  width: 100vw;
-  margin: 5vh auto auto auto;
-  left: -5vw;
+  width: 100%;
+  margin: 5vh 0 0 0;
   position: relative;
 }
 
 #project-title {
   position: absolute;
   top: 6rem;
-  width: 100vw;
+  width: 80%;
   text-align: center;
   line-height: 1rem;
 }
@@ -1117,6 +1138,7 @@ footer {
 #madeWithLove {
   font-size: 12px;
   margin-left: 5vw;
+  max-width: 200px;
 }
 
 /* Media Queries */
